# InfiniTensor_v2.0

./: .gitignore  pyproject.toml
include/core/: graph_builder.h  op_type.h
include/operators/: Clip.h  Unary.h
python/bindings/: graph.hpp
python/src/infinitensor/converter/: unified_converters.py
python/tests/: test_torch_fx_translator.py
src/core/: graph_builder.cc
src/kernels/: Clip.cc  Unary.cc
src/operators/: Clip.cc  Unary.cc
test/operators/: test_unary_op.cc
