[project]
name = "infinitensor-v2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "torch>=2.10.0",
]

[[tool.uv.index]]
url = "https://mirror.nju.edu.cn/pypi/web/simple"
default = true
